2008-02-15 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix memory leak when executing transaction.

2007-10-23 Richard Frith-Macdonald  <rfm@gnu.org>

	Postgres.m: Use E'...' syntax for bytea if it is available.

2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Update to LGPL3

2007-07-21 Richard Frith-Macdonald  <rfm@gnu.org>

        * SQLClient.m: Fix retasin bug copying transactions.
	* JDBC.m: Update for new batch code

2007-07-09 Richard Frith-Macdonald  <rfm@gnu.org>

        * SQLClient.m: Post notifications upon connect and disconnect.

2007-07-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix error causing loss of some debug output when an
	exception occurs in a transaction.
	Rewrite transaction code to support execution with automatic retry of
	statements when batching.
	* JDBC.m: Update for new transaction code

2007-04-01 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* testSQLite.m:
	* testJDBC.m:
	* MySQL.m:
	* Postgres.m:
	* GNUmakefile:
	* SQLite.m:
	* JDBC.m:
	* testMySQL.m:
	* testPostgres.m:
	* testECPG.m:
	Updates to build on MacOS-X with apple-apple-appple

2007-03-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* MySQL.m:
	* ECPG.pgm:
	* Postgres.m:
	* Oracle.pm:
	* SQLite.m:
	* JDBC.m:
	Add KVC support for SQLRecord.  Make SQLRecord into a class cluster
	with a single concrete implementation for now.  Extend API to allow
	specifying of an alternative SQLRecord subclass when doing a query
	so that query results can be efficiently stored into custom subclasses
	rather than having to first be retrieved into an SQLRecord and then
	copied.

2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile (BUNDLE_INSTALL_DIR): Set using GNUSTEP_BUNDLES,
	not GNUSTEP_INSTALLATION_DIR.

2007-01-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC.m: Add JDBC2.0 batching for when all statements in a
	transaction are simple (ie no NSData arguments) and the batch